--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.github.jbescos</groupId>
@@ -14,7 +14,7 @@
 	<name>uploading-files-complete</name>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
